LU-179 Should let PF_MEMALLOC cover ptlrpc_register_bulk()

Under memory pressure, the rpc memory allocation in bulk registration on the memory
release path also needs be covered.

Change-Id: Ie4986eb48d1e5b99b1756a0ddaa11fe0beb37462
Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/439
Reviewed-by: Liang Zhen <liang@whamcloud.com>
Tested-by: Hudson
Reviewed-by: Johann Lombardi <johann@whamcloud.com>